quick fix - content overflow

--- a/RedditWannaBe-SPA/src/components/home/home.component.mobile.scss
+++ b/RedditWannaBe-SPA/src/components/home/home.component.mobile.scss
@@ -4,7 +4,7 @@
         .topic-list {  
             padding: .5rem;                 
             display: grid;
-            grid-template-columns: 1fr;
+            grid-template-columns: 100%;
             grid-template-rows: 1fr;
             grid-gap: .3em;
         }
