--- a/RedditWannaBe-SPA/src/components/topic/topic.component.scss
+++ b/RedditWannaBe-SPA/src/components/topic/topic.component.scss
@@ -21,6 +21,10 @@
       text-align: center;
     }
 
+    .card-text {
+      word-wrap: break-word;
+    }
+
     .delete-block {
         margin: 5px 0 0 0;
         text-align: center;
